script.js is now the main logic file. the html page is using script.js by default. I changed the styling a bit, just the default preference dark mode, changed the logic. broke up the biggest function from fromgroupup.js which had 2 parts; one for local storage items (on page load) and one for dynamic items. I combined them into one function and shortened it. Did some testing, could not find bugs on my part, so I guess it was a success haha. Also added some better functionality for getting items from localstorage to the page.

--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@ input {
 }
 
 * {
-	background: black;
-	color: #f2eee5;
+	color-scheme: dark;
 }
 
 .titlecards {
@@ -18,7 +17,7 @@ input {
 	height: 50px;
 	width: 50px;
 	border-style: groove;
-	border-color: #f2eee5;
+	/* border-color: #f2eee5; */
 }
 
 .fixingspacing {
